issues with flex-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu:400,400i,500,700&display=swap');
 
+*{
+    box-sizing: border-box;
+}
+
 body {
     margin-top:0;
     margin:0;
@@ -25,4 +29,17 @@ height: 100vh;
     font-weight: bold;
     text-align: center;
     text-shadow: 0px 5px 10px rgba(6, 0, 58, 0.5);
+}
+
+#controls {
+    display:flex;
+    flex-wrap: wrap;
+}
+
+.control{
+    border: 1px solid white;
+    border-top:none;
+    width: 50%;
+    height: 15vh;
+    width: 50vw;
 }
